[package]
name = "anchor-yaml-accounts"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
doctest = false

[dependencies]
anchor-syn = "0.31.1"
dyn-clone = "1.0.19"
heck = "0.5.0"
paste = "1.0.15"
proc-macro2 = "1"
quote = "1"
syn = "1"
yaml-rust = "0.4.5"

[dev-dependencies]
test_program = { path = "./tests/test_program" }

